Fixed margin error when on mobile.

--- a/styles/skills/styles.css
+++ b/styles/skills/styles.css
@@ -29,6 +29,7 @@
                 ". css3 ."
                 ". ux_ui ."
                 ". coaching .";
+        margin-bottom: 60%;
     }
 }
 
